# transcriber

./: README.md  chainlit.md  pyproject.toml
recordings/: Recording.mp3.m4a
transcriber/backend/: tagging_service.py  transcribe.py  transcriber.py
transcriber/configuration/: config.py  prompts.toml  templates.py  toml_support.py
transcriber/frontend/: main.py
