[tool.poetry]
name = "transcriber"
version = "0.1.0"
description = ""
authors = ["SayaleeDamle <sayalee.damle@onepointltd.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.317"
openai = "^0.28.1"
whisper = "^1.1.10"
pydantic = "^2.4.2"
python-dotenv = "^1.0.0"
chainlit = "^0.7.301"
faiss-cpu = "^1.7.4"
tiktoken = "^0.3.3"
black = "^23.10.1"
ffmpeg = "^1.4"
torch = ">=2.0.0, !=2.0.1, !=2.1.0"
openai-whisper = {git = "https://github.com/openai/whisper.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
